# micro-dns

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
include/microdns/: ring_buffer.hpp  storage.hpp  wire_protocol.hpp
src/: client.cpp  daemon.cpp
tests/: ring_buffer_test.cpp  storage_test.cpp
